Implement aggressive container cleanup and retry logic for deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,38 +108,81 @@ build:
           echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
           
           echo 'Deploying immediately...'
-          echo 'Cleanup existing containers and processes...'
+          echo 'Force cleanup all containers and ports...'
           
-          # Force stop and remove any existing containers
-          docker ps -a | grep team03-webapi | awk '{print \$1}' | xargs -r docker kill 2>/dev/null || echo 'No containers to kill'
-          docker ps -a | grep team03-webapi | awk '{print \$1}' | xargs -r docker rm -f 2>/dev/null || echo 'No containers to remove'
+          # Aggressive container cleanup - multiple strategies
+          echo 'Step 1: Kill all containers with team03-webapi name...'
+          docker ps -aq --filter name=team03-webapi | xargs -r docker kill 2>/dev/null || echo 'No named containers to kill'
+          docker ps -aq --filter name=team03-webapi | xargs -r docker rm -f 2>/dev/null || echo 'No named containers to remove'
           
-          # Alternative port cleanup for rootless Docker
-          docker ps -a | grep ':8080->' | awk '{print \$1}' | xargs -r docker kill 2>/dev/null || echo 'No containers using port 8080'
-          docker ps -a | grep ':8080->' | awk '{print \$1}' | xargs -r docker rm -f 2>/dev/null || echo 'No containers to remove on port 8080'
+          echo 'Step 2: Kill containers using port 8080...'
+          docker ps --format 'table {{.ID}}\t{{.Ports}}' | grep ':8080->' | awk '{print \$1}' | xargs -r docker kill 2>/dev/null || echo 'No port 8080 containers to kill'
+          docker ps -a --format 'table {{.ID}}\t{{.Ports}}' | grep ':8080->' | awk '{print \$1}' | xargs -r docker rm -f 2>/dev/null || echo 'No port 8080 containers to remove'
           
-          # Wait a moment for cleanup
-          sleep 3
+          echo 'Step 3: Prune stopped containers...'
+          docker container prune -f 2>/dev/null || echo 'Container prune completed'
           
-          echo 'Checking port availability...'
+          echo 'Step 4: Force cleanup any remaining processes...'
+          # Kill any docker processes that might be hanging
+          pkill -f 'docker.*team03-webapi' 2>/dev/null || echo 'No hanging docker processes'
+          
+          # Wait for cleanup to complete
+          sleep 5
+          
+          echo 'Step 5: Final port check and cleanup...'
           if netstat -ln 2>/dev/null | grep ':8080 ' || ss -ln 2>/dev/null | grep ':8080 '; then
-            echo 'Warning: Port 8080 still in use, attempting force cleanup...'
-            docker ps | grep ':8080->' | awk '{print \$1}' | xargs -r docker kill 2>/dev/null || echo 'No running containers on port 8080'
-            sleep 2
+            echo 'WARNING: Port 8080 still occupied, attempting final cleanup...'
+            # Find and kill any containers still using port 8080
+            docker ps -q | xargs -r -I {} sh -c 'docker port {} 2>/dev/null | grep 8080 && docker kill {} || true'
+            sleep 3
           else
-            echo 'Port 8080 is available'
+            echo 'SUCCESS: Port 8080 is now available'
           fi
           
-          echo 'Starting new container...'
-          docker run -d \
-            --name team03-webapi \
-            -p 8080:8080 \
-            --restart unless-stopped \
-            team03-webapi:latest
+          echo 'Starting new container with retry logic...'
+          CONTAINER_ID=\"\"
+          RETRY_COUNT=0
+          MAX_RETRIES=3
+          
+          while [ \$RETRY_COUNT -lt \$MAX_RETRIES ]; do
+            echo \"Attempt \$((\$RETRY_COUNT + 1)) of \$MAX_RETRIES...\"
+            
+            CONTAINER_ID=\$(docker run -d \
+              --name team03-webapi \
+              -p 8080:8080 \
+              --restart unless-stopped \
+              team03-webapi:latest 2>/dev/null || echo \"\")
+            
+            if [ -n \"\$CONTAINER_ID\" ] && [ \"\$CONTAINER_ID\" != \"\" ]; then
+              echo \"Container started successfully: \$CONTAINER_ID\"
+              break
+            else
+              echo \"Failed to start container, attempt \$((\$RETRY_COUNT + 1)) failed\"
+              RETRY_COUNT=\$((\$RETRY_COUNT + 1))
+              
+              if [ \$RETRY_COUNT -lt \$MAX_RETRIES ]; then
+                echo \"Retrying in 5 seconds...\"
+                # Additional cleanup before retry
+                docker kill team03-webapi 2>/dev/null || true
+                docker rm team03-webapi 2>/dev/null || true
+                sleep 5
+              fi
+            fi
+          done
+          
+          if [ -z \"\$CONTAINER_ID\" ] || [ \"\$CONTAINER_ID\" = \"\" ]; then
+            echo \"CRITICAL: Failed to start container after \$MAX_RETRIES attempts\"
+            echo \"Port status:\"
+            netstat -ln | grep 8080 || ss -ln | grep 8080 || echo \"No processes on port 8080\"
+            echo \"Docker processes:\"
+            docker ps -a
+            echo 'BUILD_STATUS=DEPLOY_FAILED' > ~/build_status.txt
+            exit 1
+          fi
           
           echo 'Verifying deployment...'
           sleep 5
-          if docker ps | grep team03-webapi > /dev/null; then
+          if docker ps | grep \$CONTAINER_ID > /dev/null; then
             echo 'Container is running successfully!'
             docker ps --format 'table {{.Names}}\t{{.Status}}\t{{.Ports}}' | grep team03-webapi
             
@@ -155,11 +198,14 @@ build:
             echo 'Health Check: http://vps.purintech.id.vn:8080/health'
             echo '=================================='
             echo 'Your application is now live and accessible!'
+            echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
             echo ''
           else
             echo 'Container failed to start!'
             echo 'Docker logs:'
-            docker logs team03-webapi 2>/dev/null || echo 'No logs available'
+            docker logs \$CONTAINER_ID 2>/dev/null || echo 'No logs available'
+            echo 'Container status:'
+            docker ps -a | grep team03-webapi || echo 'No container found'
             echo 'BUILD_STATUS=DEPLOY_FAILED' > ~/build_status.txt
           fi
         else
